<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Fuelshine</string>
    <string name="fuel_shine" translatable="false">Fuelshine</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="drive">Drive</string>
    <string name="scan_car">Scan Vehicle</string>
    <string name="assistance">Assistance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_codes">Clear Codes</string>
    <string name="notification_action">Tap to open OBD-Reader</string>
    <string name="command_list">Choose a command</string>
    <string name="service_starting">Starting OBD connection..</string>
    <string name="service_started">OBD connection has started.</string>
    <string name="service_stopped">OBD connection has stopped.</string>
    <string name="notification_label">Tap to open OBD-Reader.</string>
    <string name="title_activity_trouble_codes">Trouble Codes</string>
    <string name="pref_upload_category_title">Data Upload</string>
    <string name="pref_profile_title">Profile</string>
    <string name="pref_upload_category" translatable="false">upload_category</string>
    <string name="pref_profile" translatable="false">user_profile</string>
    <string name="title_activity_trips_list">TripsList</string>
    <string name="menu_trip_list">Trips</string>
    <string name="menu_item_trip_delete">Delete</string>
    <string name="pref_gps_category" translatable="false">gps_category</string>
    <string name="dialog_loading_title">Loading…</string>
    <string name="dialog_loading_body">Loading application View, please wait…</string>
    <string name="menu_start_live_data">Start Live Data</string>
    <string name="menu_stop_live_data">Stop Live Data</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support_call">Call for support</string>
    <string name="menu_get_dtc">Get DTC</string>
    <string name="text_gps" translatable="false">GPS</string>
    <string name="text_obd" translatable="false">OBD</string>
    <string name="text_bluetooth" translatable="false">Bluetooth</string>
    <string name="text_orientation_default" translatable="false">N</string>
    <string name="text_zero" translatable="false">0</string>
    <string name="text_consumption_default" translatable="false">0l/100km</string>
    <string name="text_runtime_default" translatable="false">00:00:00</string>
    <string name="title_pref_obd">OBD Preferences</string>
    <string name="title_pref_commands">OBD Commands</string>
    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="text_no_bluetooth_id">Sorry, your device doesn\'t support Bluetooth</string>
    <string name="text_bluetooth_disabled">You have Bluetooth disabled. Please enable it (using Mock service)</string>
    <string name="text_bluetooth_nodevice">No Bluetooth device selected</string>
    <string name="text_bluetooth_error_connecting">Cannot connect to bluetooth device!</string>
    <string name="text_no_orientation_sensor">Orientation sensor missing?</string>
    <string name="text_no_gps_support">Sorry, your device doesn\'t support or has disabled GPS.</string>
    <string name="text_save_trip_not_available">Sorry, trip will not be saved.</string>
    <string name="text_obd_command_failure">OBD command failure!</string>
    <string name="text_dtc_no_data">No DTC stored</string>
    <string name="status_no_bluetooth_id">unavailable</string>
    <string name="status_bluetooth_disabled">disabled</string>
    <string name="status_bluetooth_ok">ready</string>
    <string name="status_bluetooth_connecting">connecting&#8230;</string>
    <string name="status_bluetooth_connected">CONNECTED</string>
    <string name="status_bluetooth_error_connecting">connection failed</string>
    <string name="status_gps_fix">fix acquired</string>
    <string name="status_gps_no_fix">fix not acquired</string>
    <string name="status_gps_started">started</string>
    <string name="status_gps_stopped">stopped</string>
    <string name="status_gps_ready">ready</string>
    <string name="status_gps_no_support">not available</string>
    <string name="status_gps_not_used">not used</string>
    <string name="status_obd_ready">OK</string>
    <string name="status_obd_data">receiving data&#8230;</string>
    <string name="status_obd_disconnected">disconnected</string>
    <string name="status_obd_no_support">NA</string>
    <string name="pref_upload_title">Enable Data Upload</string>
    <string name="pref_upload_summaryOff">Enable http data upload</string>
    <string name="pref_upload_summaryOn">Disable http data upload</string>
    <string name="pref_upload_url_title">Upload URL</string>
    <string name="pref_upload_profile">User Profile</string>
    <string name="pref_upload_url_summary">POST URL that will accept real-time data</string>
    <string name="pref_vehicle_id_title">Vehicle ID</string>
    <string name="pref_vehicle_id_summary">Optional unique id of this vehicle, used with uploaded data</string>
    <string name="pref_bluetooth_title">Enable Bluetooth</string>
    <string name="pref_bluetooth_summaryOff">Turn on Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Turn off Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">List of paired bluetooth devices.</string>
    <string name="pref_bluetooth_list_devices_title">Bluetooth Devices</string>
    <string name="pref_gps_category_title">Enable GPS</string>
    <string name="pref_gps_category_summaryOff">Turn on GPS</string>
    <string name="pref_gps_category_summaryOn">Turn off GPS</string>
    <string name="pref_gps_update_period_title">Update Period in Seconds</string>
    <string name="pref_gps_update_period_summary">The length of time between querying new position in seconds</string>
    <string name="pref_gps_distance_period_title">Update Period in Meters</string>
    <string name="pref_gps_distance_period_summary">Min Distance between location updates, in meters</string>
    <string name="pref_obd_protocols_title">OBD Protocol</string>
    <string name="pref_obd_protocols_summary">Select OBD Protocol to use</string>
    <string name="pref_imperial_units_title">Imperial Units</string>
    <string name="pref_imperial_units_summaryOff">Enable imperial units</string>
    <string name="pref_imperial_units_summaryOn">Go back to metric units</string>
    <string name="pref_obd_update_period_title">Update Period in Seconds</string>
    <string name="pref_obd_update_period_summary">The length of time between querying vehicle data in seconds</string>
    <string name="pref_max_fuel_econ_title">Maximum Fuel Economy Value</string>
    <string name="pref_max_fuel_econ_summary">Any fuel economy values larger than this will be thrown out</string>
    <string name="pref_volumetric_efficiency_dialog_title">Volumetric Efficiency (eg 0.85)</string>
    <string name="pref_volumetric_efficiency_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_volumetric_efficiency_title">Volumetric Efficiency</string>
    <string name="pref_engine_displacement_title">Engine Displacement (liters)</string>
    <string name="pref_engine_displacement_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_reader_config_title">Reader Config Commands</string>
    <string name="pref_reader_config_summary">Commands to configure bluetooth reader, separate with new line</string>
    <string name="title_pref_commands_summary">Select the commands you would like to see in real-time.</string>
    <string name="title_pref_commands_title">OBD Commands</string>
    <string name="title_pref_full_logging"> Full logging configuration </string>
    <string name="pref_enable_full_logging_summary"> Enables full offline logging with upload</string>
    <string name="pref_enable_full_logging_title"> Enable full logging </string>
    <string name="default_dirname_full_logging">OBDReaderLogs</string>
    <string name="pref_dirname_dialogTitle">Choose the name of the directory to save the logs</string>
    <string name="pref_dirname_title">Directory name</string>
    <string name="pref_dirname_summary">Name of the directory where to save the files</string>
    <string name="pref_dev_email_title">Developer Email</string>
    <string name="pref_dev_email_summary">Logs will be emailed to this address</string>
    <string name="text_noerrors">There were no errors found.!</string>
    <string name="settings">Settings</string>
    <string name="my_cars">My Vehicles</string>
    <string name="buy_iot">Buy Gypsee Drive </string>
    <string name="offers">Offers</string>
    <string name="raise_ticket">Share Feedback</string>
    <string name="referral_code">Referral Code</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="app_intro">Quick Manual</string>
    <string name="channel_promo_code">Channel Promo Code</string>
    <string name="you_re_all_set">You\'re all set!</string>
    <string name="drive_safely_and_fuel_efficiently_with_fuelshine">Drive safely and fuel efficiently with Fuelshine</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="tracking_setup">Tracking setup</string>
    <string name="auto_track_your_trips_nas_soon_as_you_start_ndriving">Auto-track your trips \nas soon as you start \ndriving</string>
    <string name="our_smart_motion_sensor_helps_you_get_the_most_accurate_logbook_and_the_compensation_you_re_due_while_saving_battery_whenever_the_sensor_is_not_triggered">Our smart motion sensor helps you get the most accurate logbook (and the compensation you\'re due!)while saving battery whenever the sensor is not triggered.</string>
    <string name="activate_physical_activity">Activate Physical Activity</string>
    <string name="set_location_to_allow_all_the_time">Set Location to \'Allow all the time\'</string>
    <string name="this_allows_fuelshine_to_tarck_your_trips_as_accurately_as_possible_even_when_your_screen_is_locked_or_while_you_re_using_other_apps">This allows Fuelshine to tarck your trips as accurately as possible (even when your screen is locked or while you\'re using other apps).</string>
    <string name="continue_btn">Continue</string>
    <string name="notification">Notification</string>
    <string name="stay_informed_about_your_trips">Stay informed about your trips</string>
    <string name="turn_notifications_on_to_know_the_state_of_your_trips_we_ll_only_send_you_the_most_important_ones">Turn notifications on to know the state of your trips. We\'ll only send you the most important ones.</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="personalized_coaching_for_fuel_efficient_driving">Personalized coaching for fuel efficient driving</string>
    <string name="connect_fuelshine_to_your_car_stereo_via_bluetooth_to_enable_real_time_hands_free_feedback_for_enhanced_safety_and_trip_records">Connect fuelshine to your car stereo via Bluetooth to enable real-time, hands-free feedback for enhanced safety and trip records.</string>
    <string name="cancel">Cancel</string>
    <string name="let_s_go_btn">Let\'s go</string>
    <string name="on_checking_there_are_no_cars_attached_to_your_profile_we_request_you_to_add_a_car">On checking, there are no cars attached to your profile. We request you to add a car.</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="car_wash">Car Wash</string>
    <string name="ac_dc_car_w">AC/DC Car Wash</string>
    <string name="some_id">-500</string>
    <string name="today_11_45">Today 11:45 A.M</string>
</resources>