<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.NewPermissionsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:src="@drawable/start_icon"
        android:id="@+id/img"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/txt1"
        android:textSize="17sp"
        android:text="@string/you_re_all_set"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/drive_safely_and_fuel_efficiently_with_fuelshine"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permissionsBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/bottons"
        android:text="@string/let_s_go" />



</androidx.constraintlayout.widget.ConstraintLayout>