<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/add_vehicle"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTv"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/on_checking_there_are_no_cars_attached_to_your_profile_we_request_you_to_add_a_car"
            android:textColor="@color/text_black"
            android:textSize="12dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionTV"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/positioveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineView"
                android:layout_toStartOf="@+id/lineView2"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/let_s_go_btn"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:textStyle="bold" />

            <View
                android:id="@+id/lineView2"
                android:layout_width="1dp"
                android:layout_height="38dp"
                android:layout_below="@+id/descriptionTV"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/white" />

            <TextView
                android:id="@+id/negativeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineView"
                android:layout_toEndOf="@+id/lineView2"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:textSize="13dp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>