<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rectangle_7"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:layout_margin="10dp"
    android:background="@drawable/transactions_bg">

    <ImageView
        android:id="@+id/transactions_img"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/settins_icon"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/carDtls"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/transactions_img"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="55dp"
        >

        <TextView
            android:id="@+id/car_wash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:lineHeight="17sp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/car_wash"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/ac_dc_car_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_dc_car_w"
            android:textColor="@color/transactions_grey"
            android:textSize="12sp"
            android:lineHeight="15sp"
            android:fontFamily="@font/inter_regular"
            android:gravity="top"
            />





    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        >

        <TextView
            android:id="@+id/some_id"
            android:layout_width="40dp"
            android:layout_height="18dp"
            android:textColor="@color/transactions_red"
            android:text="@string/some_id"
            android:fontFamily="@font/inter_regular"
            android:textSize="15sp"
            android:lineHeight="18sp"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/today_11_45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/transactions_grey"
            android:text="@string/today_11_45"
            android:gravity="top"
            android:textSize="12sp"
            android:fontFamily="@font/inter_regular"
            android:lineHeight="15sp"
            />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

