<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="25dp"
    tools:context=".fragments.PhysicalActivityPermissionFragment">




            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:src="@drawable/physical_activity_icon"
                android:id="@+id/physicalActImg"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt1"
                app:layout_constraintTop_toBottomOf="@id/physicalActImg"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/tracking_setup"
                android:textSize="15sp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt2"
                app:layout_constraintTop_toBottomOf="@id/txt1"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/auto_track_your_trips_nas_soon_as_you_start_ndriving"
                android:textSize="25sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/colorPrimaryDark"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt3"
                app:layout_constraintTop_toBottomOf="@id/txt2"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/our_smart_motion_sensor_helps_you_get_the_most_accurate_logbook_and_the_compensation_you_re_due_while_saving_battery_whenever_the_sensor_is_not_triggered"
                android:textSize="15sp"
                android:lineHeight="20dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/activityPermissionBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/poppins"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/bottons"
                android:text="@string/activate_physical_activity" />











</androidx.constraintlayout.widget.ConstraintLayout>